# arcaea-offline-db-upgrade-helper

./: index.py  pyproject.toml
ui/: mainwindow.py  mainwindow.ui  mainwindow_ui.py
ui/dbConvert/: V1ToV4.py  V1ToV4.ui  V1ToV4_ui.py
ui/dbPreview/: v4.py
ui/shared/: fileSelector.py  fileSelector_ui.py  showPreviewTableView.py
