[project]
name = "arcaea-offline-db-upgrade-helper"
version = "0.1.0"
authors = [{ name = "283375", email = "log_283375@163.com" }]
description = "No description."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["arcaea-offline==0.2.0", "PySide6==6.5.2"]

[project.urls]
"Homepage" = "https://github.com/283375/arcaea-offline-db-upgrade-helper"
"Bug Tracker" = "https://github.com/283375/arcaea-offline-db-upgrade-helper/issues"

[tool.black]
force-exclude = '''
(
  .*_ui.py
  | .*_rc.py
)
'''

[tool.isort]
profile = "black"
extend_skip_glob = ["*_ui.py", "*_rc.py"]
